Add homepage for gh-page

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-graphql-github-apollo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://naing2victor.github.io/react-graphql-github-apollo",
   "dependencies": {
     "apollo-cache-inmemory": "^1.3.6",
     "apollo-client": "^2.4.3",
